tests/negative/neg_character_return_type.safe
-- Test: neg_character_return_type
-- Description: Character-returning functions reject integer return expressions.
-- Expected: REJECT type_check_failure

package Neg_Character_Return_Type is

   function Broken return Character is
   begin
      return 999;
   end Broken;

end Neg_Character_Return_Type;
